--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                       </h2>
                       <p class="fs-lg text-muted mb-6">
                           <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                          Learn from the experts...
+                          Learn from the experts......
                           
                       </p>                      
                   </div>
