--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                       <!-- Heading -->
                       <h1 class="display-3 text-center text-md-start">
-                        VSELs next generation stem cell therapy
+                        VSELs are the next generation stem cell therapy
                         <!--<span class="text-primary"></span>-->
                          <br><br>
 
