--- a/index.html
+++ b/index.html
@@ -170,6 +170,49 @@
       <br>
       <br>
 
+      <section class="pt-8 pt-md-11 bg-white cust-pad">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-5 col-lg-6  cust-pad">
+                    <img src="images/class.png" class="screenshot img-fluid img-skewed-item" alt="...">
+                </div>
+                <div class="col-12 col-md-7 col-lg-6  cust-pad">
+                    <h2>
+                      Learn from the experts
+                    </h2>
+                    <p class="fs-lg text-muted mb-6">
+                        <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
+                        Learn from the experts in functional and natural medicine such as 
+                          Alan Christianson NMD,
+                          Chris Masterjohn Ph.D.,
+                          Cindy Geyer MD,
+                          Datis Kharrazian Ph.D.,
+                          Deanna Minich Ph.D.,
+                          Elizabeth Boham MD,
+                          Frank Shallenberger MD,
+                          Gabrielle Lyon DO,
+                          Geo Espinosa ND,
+                          George Papanicolaou DO,
+                          Jason Fung MD,
+                          Joseph Pizzorno ND,
+                          Lucy Mailing Ph.D.,
+                          Maggie Ward MS RD,
+                          Mark Hyman MD,
+                          Sarah Ballantyne Ph.D.,
+                          Sarah Hallberg DO,
+                          Todd LePine MD,
+                          Tom Fabian Ph.D.,
+                        and more
+                        
+                    </p>                      
+                </div>
+            </div> <!-- / .row -->
+        </div> <!-- / .container -->
+    </section>
+    
+    <br>
+    <br>
+
     <!-- TESTIMONIALS -->
     <section class="pt-10 pt-md-12">
         <div class="container">
