--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./assets/css/theme.bundle.css" />
     
     <!-- Title -->
-    <title>Avon VSEL Stem Cell Therapy</title>
+    <title>Institute of Regeneration VSEL Stem Cell Therapy</title>
       <style>
           .cust-pad
           {
@@ -213,10 +213,12 @@
 
                       <!-- Text -->
                       <p class="text-gray-700 mb-2">
-                          © Avon Cell Therapy <br><br>
+                          © Institute of Regeneration <br><br>
+                          <!--
                           <a href="index.html">Avon Cell Therapy</a> <br>
                           <a href="https://avoninstitute.com/" target="_blank">Avon Institute</a> <br>
                           <a href="https://avonehr.com/" target="_blank">Avon EHR</a>
+                          -->
                       </p>
 
                       <!-- Social -->
