--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                           </a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="index.html">
+                          <a class="nav-link" id="navbarPages" href="science.html">
                               Science
                           </a>
                       </li>
