--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                           </a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="index.html">
+                          <a class="nav-link" id="navbarPages" href="faq.html">
                               FAQ
                           </a>
                       </li>
