--- a/index.html
+++ b/index.html
@@ -196,6 +196,12 @@
 
                       <!-- Text -->
                       <p class="text-gray-700 mb-2">
+                          
+                          New City Medical Plaza <br>
+                          P.º del Centenario 9580 <br>
+                          Zona Urbana Rio Tijuana, 22010 Tijuana, B.C. <br>
+                          Mexico <br>
+                          <br>
                           © Institute of Regeneration <br><br>
                           <!--
                           <a href="index.html">Avon Cell Therapy</a> <br>
