--- a/faq.html
+++ b/faq.html
@@ -158,7 +158,7 @@
             </p>
             <p>
                 <b>What is the cost of treatment?</b> <br>
-                The treatment normally costs $4,000.  If a patient can not afford treatment, and their medical situation is critical, then we will provide treatment for less or free.
+                The treatment normally costs $4,000.  If a patient can not afford treatment, and their medical situation is critical, then we will provide treatment for less or for free.
             </p>
             <p>
                 <b>How does your treatment cost compare to other clinics?</b> <br>
