--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
 
             <!-- Heading -->
             <h1 class="display-4 text-center">
-              Frequently Asked Questions (FAQ)
+              Contact Us
             </h1>
 
           </div>
@@ -132,45 +132,22 @@
           <div class="col-12 col-md-10 col-lg-9 col-xl-8">
 
             <p>
-                <b>What types of stem cells do you use?</b> <br>
-                We use only VSELs, which stands for "very small embryonic-like" stem cells.
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2622.6106572959543!2d-117.0240009076939!3d32.53605701398647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9497919d9d27d%3A0x62544f1fef56fb8b!2sP.%C2%BA%20del%20Centenario%209580%2C%20Zona%20Urbana%20Rio%20Tijuana%2C%2022320%20Tijuana%2C%20B.C.%2C%20Mexico!5e0!3m2!1sen!2sus!4v1665254423020!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </p>
+              
             <p>
-                <b>Where do these stem cells come from?</b> <br>
-                VSELs come from the patients peripheral blood.
+            <b>Address</b> <br>
+              Institute of Regeneration <br>
+              New City Medical Plaza <br>
+              P.º del Centenario 9580 <br>
+              Zona Urbana Rio Tijuana <br>
+              22010 Tijuana, B.C. <br>
+              Mexico <br>
             </p>
 
             <p>
-                <b>Are these stem cells autologous (derived from the patient) or allogeneic (derived from healthy donors)? </b> <br>
-                VSELs are autologous (derived from the patient).
-            </p>
-            <p>
-                <b>How long is the treatment?</b> <br>
-                Treatment takes about two hours.
-            </p>
-            <p>
-                <b>May VSEL treatment be repeated?</b> <br>
-                VSEL treatment may be repeated every 3 months.
-            </p>
-            <p>
-                <b>Is the patient awake during the procedure?</b> <br>
-                The patient is fully awake and aware during the entire treament.
-            </p>
-            <p>
-                <b>Does the treatment have side effects?</b> <br>
-                Our patients have never had any serious side effects from this treatment.
-            </p>
-            <p>
-                <b>What is the cost of treatment?</b> <br>
-                The treatment costs $4,000.  If a patient can not afford treatment, and their medical situation is critical, then we may provide treatment for less or for free.
-            </p>
-            <p>
-                <b>How does your treatment compare to other clinics?</b> <br>
-                Most clinics in the United States charge $7,000 to $11,000 for the same treatment.
-            </p>
-            <p>
-                <b>Will my insurance cover the cost of treatment?</b> <br>
-                Insurance companies do not cover stem cell therapy.
+            <b>Email</b> <br>
+              patients@institutereg.com
             </p>
 
           </div>
