--- a/vsels.html
+++ b/vsels.html
@@ -85,13 +85,9 @@
                               FAQ
                           </a>
                       </li>
+
                       <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="index.html">
-                              Trials
-                          </a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="index.html">
+                          <a class="nav-link" id="navbarPages" href="contact.html">
                               Contact
                           </a>
                       </li>
