--- a/index.html
+++ b/index.html
@@ -82,12 +82,7 @@
                           </a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="index.html">
-                              Trials
-                          </a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="index.html">
+                          <a class="nav-link" id="navbarPages" href="contact.html">
                               Contact
                           </a>
                       </li>
@@ -196,12 +191,6 @@
 
                       <!-- Text -->
                       <p class="text-gray-700 mb-2">
-                          
-                          New City Medical Plaza <br>
-                          P.º del Centenario 9580 <br>
-                          Zona Urbana Rio Tijuana, 22010 Tijuana, B.C. <br>
-                          Mexico <br>
-                          <br>
                           © Institute of Regeneration <br><br>
                           <!--
                           <a href="index.html">Avon Cell Therapy</a> <br>
