--- a/faq.html
+++ b/faq.html
@@ -149,6 +149,10 @@
                 Treatment takes about two hours.
             </p>
             <p>
+                <b>What happens in the treatment?</b> <br>
+                We draw 60 ml of the patients peripheral blood.  A laser is used to activate the VSELs in the blood.  The blood is returned to the patient.  A laser guides the VSELs to any organs of concern.
+            </p>
+            <p>
                 <b>May VSEL treatment be repeated?</b> <br>
                 VSEL treatment may be repeated every 3 months.
             </p>
