--- a/faq.html
+++ b/faq.html
@@ -150,7 +150,7 @@
             </p>
             <p>
                 <b>What happens in the treatment?</b> <br>
-                We draw 60 ml of the patients peripheral blood.  A laser is used to activate the VSELs in the blood.  The blood is returned to the patient.  A laser guides the VSELs to any organs of concern.
+                66 mL of peripheral blood is collected and centrifuged.  The resultant platelet rich plasma (PRP) is exposed to a modulated laser for 3 minutes and then re-infused back into the patient intravenously.
             </p>
             <p>
                 <b>May VSEL treatment be repeated?</b> <br>
@@ -162,7 +162,7 @@
             </p>
             <p>
                 <b>Does the treatment have side effects?</b> <br>
-                Our patients have never had any serious side effects from this treatment.
+                e know of no serious side effects from this treatment.
             </p>
             <p>
                 <b>What is the cost of treatment?</b> <br>
