--- a/faq.html
+++ b/faq.html
@@ -137,7 +137,7 @@
             </p>
             <p>
                 <b>Where do these stem cells come from?</b> <br>
-                VSELs come from the patients peripheral blood.
+                VSELs come from the patient's peripheral blood.
             </p>
 
             <p>
@@ -150,7 +150,7 @@
             </p>
             <p>
                 <b>What happens in the treatment?</b> <br>
-                66 mL of peripheral blood is collected and centrifuged.  The resultant platelet rich plasma (PRP) is exposed to a modulated laser for 3 minutes and then re-infused back into the patient intravenously.
+                66 mL of the patient's peripheral blood is collected and centrifuged.  The resultant platelet rich plasma (PRP) is exposed to a laser for 3 minutes and then re-infused back into the patient intravenously.  <!--Immediately following the intravenous administration, a laser can be used to guide the VSELs to any organ of concern.-->
             </p>
             <p>
                 <b>May VSEL treatment be repeated?</b> <br>
@@ -162,7 +162,7 @@
             </p>
             <p>
                 <b>Does the treatment have side effects?</b> <br>
-                e know of no serious side effects from this treatment.
+                We know of no serious side effects from this treatment.
             </p>
             <p>
                 <b>What is the cost of treatment?</b> <br>
