--- a/routine.html
+++ b/routine.html
@@ -202,36 +202,39 @@
 <br>
 <p><b>General</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>no junk or processed food</td>
-<tr><td> </td><td>no burned or blackened foods</td>
-<tr><td> </td><td>no high heat cooking</td>
-<tr><td> </td><td>no fruit juice</td>
-<tr><td> </td><td>no chemicals</td>
-<tr><td> </td><td>minimal drugs</td>
-<tr><td> </td><td>no fragrances</td>
-<tr><td> </td><td>antibiotics only if necessary</td>
-<tr><td> </td><td>no IV antibiotics</td>
-<tr><td> </td><td>no alcohol</td>
-<tr><td> </td><td>no NSAIDs</td>
-<tr><td> </td><td>no mouth breathing</td>
-<tr><td> </td><td>no mRNA vaccines</td>
-<tr><td> </td><td>no heavy metals</td>
-<tr><td> </td><td>no food in contact with plastic</td>
-<tr><td> </td><td>no teflon non-stick pans</td>
-<tr><td> </td><td>no bright lights late at night</td>
-<tr><td> </td><td>no EMFs, cordless phones, WIFI routers, cell phones</td>
-<tr><td> </td><td>no flour</td>
-<tr><td> </td><td>no acellular carbohydrates</td>
-<tr><td> </td><td>minimal caffeine</td>
-<tr><td> </td><td>minimal TV</td>
-<tr><td> </td><td>minimal personal care products</td>
-<tr><td> </td><td>avoid brush and camping to avoid lyme disease</td>
-<tr><td> </td><td>no mouthwash </td>
-<tr><td> </td><td>no root canals</td>
-<tr><td> </td><td>no tatoos</td>
-<tr><td> </td><td>no hormonal birth control</td>
-<tr><td> </td><td>no antipersperant</td>
-<tr><td> </td><td>no hair dye</td>
+<tr><td> </td><td>No junk or processed food</td>
+<tr><td> </td><td>No burned or blackened foods</td>
+<tr><td> </td><td>No high heat cooking</td>
+<tr><td> </td><td>No fruit juice</td>
+<tr><td> </td><td>No food in contact with plastic</td>
+<tr><td> </td><td>No teflon non-stick pans</td>
+<tr><td> </td><td>No flour</td>
+<tr><td> </td><td>No acellular carbohydrates</td>
+<tr><td> </td><td>Minimal caffeine</td>
+<tr><td> </td><td>No alcohol</td>
+<tr><td> </td><td>No flour</td>
+<tr><td> </td><td>No acellular carbohydrates</td>
+<tr><td> </td><td>Minimal caffeine</td>
+
+<tr><td> </td><td>No chemicals</td>
+<tr><td> </td><td>Minimal drugs</td>
+<tr><td> </td><td>Antibiotics only if necessary</td>
+<tr><td> </td><td>No IV antibiotics</td>
+<tr><td> </td><td>No NSAIDs</td>
+<tr><td> </td><td>No mRNA vaccines</td>
+<tr><td> </td><td>No heavy metals</td>
+<tr><td> </td><td>Minimal personal care products</td>
+<tr><td> </td><td>No fragrances</td>
+
+<tr><td> </td><td>No bright lights late at night</td>
+<tr><td> </td><td>No EMFs, cordless phones, WIFI routers, cell phones</td>
+<tr><td> </td><td>Minimal TV</td>
+<tr><td> </td><td>No contact with outdoor high grass to avoid Lyme disease</td>
+
+<tr><td> </td><td>No mouth breathing</td>
+<tr><td> </td><td>No mouthwash </td>
+<tr><td> </td><td>No root canals</td>
+<tr><td> </td><td>No metal dental implants</td>
 </table>
 
               
