--- a/routine.html
+++ b/routine.html
@@ -236,6 +236,8 @@
 <tr><td> </td><td>No root canals</td>
 <tr><td> </td><td>No metal dental implants</td>
 </table>
+     
+/* cd /Users/davidpotter/Desktop/institutereg_website; git add .; git commit -m "."; git push */
 
               
           </div>
