--- a/routine.html
+++ b/routine.html
@@ -213,7 +213,6 @@
 <tr><td> </td><td>Minimal caffeine</td>
 <tr><td> </td><td>No alcohol</td>
 <tr><td> </td><td>No flour</td>
-<tr><td> </td><td>No acellular carbohydrates</td>
 <tr><td> </td><td>Minimal caffeine</td>
 
 <tr><td> </td><td>No chemicals</td>
@@ -221,8 +220,8 @@
 <tr><td> </td><td>Antibiotics only if necessary</td>
 <tr><td> </td><td>No IV antibiotics</td>
 <tr><td> </td><td>No NSAIDs</td>
-<tr><td> </td><td>No mRNA vaccines</td>
 <tr><td> </td><td>No heavy metals</td>
+<tr><td> </td><td>Minimal vaccines</td>
 <tr><td> </td><td>Minimal personal care products</td>
 <tr><td> </td><td>No fragrances</td>
 
@@ -236,7 +235,7 @@
 <tr><td> </td><td>No root canals</td>
 <tr><td> </td><td>No metal dental implants</td>
 </table>
-     
+
 /* cd /Users/davidpotter/Desktop/institutereg_website; git add .; git commit -m "."; git push */
 
               
