--- a/routine.html
+++ b/routine.html
@@ -208,12 +208,13 @@
 <tr><td> </td><td>No fruit juice</td>
 <tr><td> </td><td>No food in contact with plastic</td>
 <tr><td> </td><td>No teflon non-stick pans</td>
-<tr><td> </td><td>No flour</td>
-<tr><td> </td><td>No acellular carbohydrates</td>
-<tr><td> </td><td>Minimal caffeine</td>
 <tr><td> </td><td>No alcohol</td>
 <tr><td> </td><td>No flour</td>
 <tr><td> </td><td>Minimal caffeine</td>
+<tr><td> </td><td>No gluten</td>
+<tr><td> </td><td>Minimal dairy</td>
+<tr><td> </td><td>No flour</td>
+<tr><td> </td><td>No acellular carbohydrates</td>
 
 <tr><td> </td><td>No chemicals</td>
 <tr><td> </td><td>Minimal drugs</td>
@@ -227,6 +228,7 @@
 
 <tr><td> </td><td>No bright lights late at night</td>
 <tr><td> </td><td>No EMFs, cordless phones, WIFI routers, cell phones</td>
+<tr><td> </td><td>Minimal x-rays and CAT scans</td>
 <tr><td> </td><td>Minimal TV</td>
 <tr><td> </td><td>No contact with outdoor high grass to avoid Lyme disease</td>
 
@@ -236,7 +238,7 @@
 <tr><td> </td><td>No metal dental implants</td>
 </table>
 
-/* cd /Users/davidpotter/Desktop/institutereg_website; git add .; git commit -m "."; git push */
+<!-- cd /Users/davidpotter/Desktop/institutereg_website; git add .; git commit -m "."; git push -->
 
               
           </div>
