--- a/routine.html
+++ b/routine.html
@@ -135,7 +135,7 @@
 <table style="celllpadding: 100px">
 <tr><td>6:00 AM </td><td>Drink water </td>
 <tr><td>7:00 AM </td><td>Weight lifting at the gym, a few days per week </td>
-<tr><td>        </td><td>Coming soon: KAATSU® Blood Flow Restriction training</td>
+<tr><td>        </td><td>Coming soon: KAATSU Blood Flow Restriction training</td>
 <tr><td>8:00 AM </td><td>Red and infrared light therapy on entire body</td>
 <tr><td>        </td><td>Maragen calcium in two cups water</td>
 <tr><td>        </td><td>Coming soon: Sauna</td>
@@ -195,36 +195,37 @@
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Whole house water filter</td>
 <tr><td> </td><td>Whole house air filter</td>
-<tr><td> </td><td>Standing desk</td>
+<tr><td> </td><td>Standing desk from varidesk.com</td>
 <tr><td> </td><td>Install reticare screen over monitors to protect eyes</td>
 </table>
 
 <br>
 <p><b>General</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>No junk or processed food</td>
+<tr><td> </td><td>No processed food</td>
 <tr><td> </td><td>No burned or blackened foods</td>
 <tr><td> </td><td>No high heat cooking</td>
 <tr><td> </td><td>No fruit juice</td>
-<tr><td> </td><td>No food in contact with plastic</td>
-<tr><td> </td><td>No teflon non-stick pans</td>
 <tr><td> </td><td>No alcohol</td>
 <tr><td> </td><td>No flour</td>
-<tr><td> </td><td>Minimal caffeine</td>
 <tr><td> </td><td>No gluten</td>
-<tr><td> </td><td>Minimal dairy</td>
-<tr><td> </td><td>No flour</td>
 <tr><td> </td><td>No acellular carbohydrates</td>
+<tr><td> </td><td>Minimal oxalates</td>
+<tr><td> </td><td>Minimal dairy</td>
+<tr><td> </td><td>Minimal iodine</td>
+<tr><td> </td><td>Minimal caffeine</td>
+
+<tr><td> </td><td>No plastic contacting food</td>
+<tr><td> </td><td>No teflon non-stick cookware</td>
 
 <tr><td> </td><td>No chemicals</td>
 <tr><td> </td><td>Minimal drugs</td>
-<tr><td> </td><td>Antibiotics only if necessary</td>
+<tr><td> </td><td>Minimal antibiotics</td>
 <tr><td> </td><td>No IV antibiotics</td>
 <tr><td> </td><td>No NSAIDs</td>
 <tr><td> </td><td>No heavy metals</td>
 <tr><td> </td><td>Minimal vaccines</td>
 <tr><td> </td><td>Minimal personal care products</td>
-<tr><td> </td><td>No fragrances</td>
 
 <tr><td> </td><td>No bright lights late at night</td>
 <tr><td> </td><td>No EMFs, cordless phones, WIFI routers, cell phones</td>
