--- a/routine.html
+++ b/routine.html
@@ -210,12 +210,13 @@
 <tr><td> </td><td>No flour</td>
 <tr><td> </td><td>No gluten</td>
 <tr><td> </td><td>No acellular carbohydrates</td>
+<tr><td> </td><td>Minimal linoleic acid</td>
 <tr><td> </td><td>Minimal oxalates</td>
 <tr><td> </td><td>Minimal dairy</td>
 <tr><td> </td><td>Minimal iodine</td>
 <tr><td> </td><td>Minimal caffeine</td>
 
-<tr><td> </td><td>No plastic contacting food</td>
+<tr><td> </td><td>No plastic in contact with food</td>
 <tr><td> </td><td>No teflon non-stick cookware</td>
 
 <tr><td> </td><td>No chemicals</td>
