--- a/routine.html
+++ b/routine.html
@@ -140,12 +140,12 @@
 <tr><td>        </td><td>Maragen calcium in two cups water</td>
 <tr><td>        </td><td>Coming soon: Sauna</td>
 <tr><td>8:15 AM </td><td>Apply sunscreen to face </td>
-<tr><td>        </td><td>Brisk walk to set circadian rhythm </td>
+<tr><td>        </td><td>Brisk walk outside to set circadian rhythm </td>
 <tr><td>        </td><td>While walking wear glasses to protect eyes from UV light </td>
 <tr><td>        </td><td>While walking wear hat with wide brim to protect facial skin from UV light </td>
 <tr><td>9:00 AM </td><td>Molecular hydrogen in glass of water</td>
 <tr><td>9:30 AM </td><td>Breakfast</td>
-<tr><td>        </td><td>Blend avocado, dandelion, blackberries, cranberries, lemon juice, water</td>
+<tr><td>        </td><td>Blend an avocado, dandelion greens, frozen blackberries, frozen cranberries, lemon juice, water</td>
 <tr><td>        </td><td>Epic bison bites, cucumber, macadamia nuts</td>
 <tr><td>        </td><td>50 supplements</td>
 <tr><td>        </td><td>Rinse mouth with xylitol and baking soda</td>
@@ -154,8 +154,9 @@
 <tr><td>        </td><td>Enzymes, multivitamin, calcium, magnesium</td>
 <tr><td>        </td><td>Rinse mouth with xylitol and baking soda</td>
 <tr><td>        </td><td>Wait about 30 minutes, brush teeth</td>
+<tr><td>1:00 PM </td><td>Brisk walk outside</td>
 <tr><td>3:00 PM </td><td>If tired use NuCalm</td>
-<tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field (PEMF) therapy </td>
+<tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy </td>
 <tr><td>4:30 PM </td><td>One cup bone broth </td>
 <tr><td>5:00 PM </td><td>Dinner consisting of beef, potato, vegetables, dried fruit </td>
 <tr><td>        </td><td>Enzymes, multivitamin, calcium, magnesium</td>
