--- a/routine.html
+++ b/routine.html
@@ -145,7 +145,7 @@
 <tr><td>        </td><td>While walking wear hat with wide brim to protect facial skin from UV light </td>
 <tr><td>9:00 AM </td><td>Molecular hydrogen in glass of water</td>
 <tr><td>9:30 AM </td><td>Breakfast</td>
-<tr><td>        </td><td>Blend an avocado, dandelion greens, frozen blackberries, frozen cranberries, lemon juice, water</td>
+<tr><td>        </td><td>Blend an avocado, dandelion, blackberries, cranberries, lemon juice, water</td>
 <tr><td>        </td><td>Epic bison bites, cucumber, macadamia nuts</td>
 <tr><td>        </td><td>50 supplements</td>
 <tr><td>        </td><td>Rinse mouth with xylitol and baking soda</td>
@@ -194,10 +194,10 @@
 <br>
 <p><b>One-time setup</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Whole house water filter</td>
-<tr><td> </td><td>Whole house air filter</td>
+<tr><td> </td><td>Whole house water filter from ophorawater.com</td>
+<tr><td> </td><td>Whole house air filter from iqair.com</td>
 <tr><td> </td><td>Standing desk from varidesk.com</td>
-<tr><td> </td><td>Install reticare screen over monitors to protect eyes</td>
+<tr><td> </td><td>Install reticare.com screen over monitors to protect eyes</td>
 </table>
 
 <br>
