--- a/routine.html
+++ b/routine.html
@@ -212,6 +212,7 @@
 <tr><td> </td><td>No gluten</td>
 <tr><td> </td><td>No acellular carbohydrates</td>
 <tr><td> </td><td>Minimal linoleic acid</td>
+<tr><td> </td><td>No industrial seed oils</td>
 <tr><td> </td><td>Minimal oxalates</td>
 <tr><td> </td><td>Minimal dairy</td>
 <tr><td> </td><td>Minimal iodine</td>
