--- a/faq.html
+++ b/faq.html
@@ -81,6 +81,11 @@
                           </a>
                       </li>
                       <li class="nav-item">
+                          <a class="nav-link" id="navbarPages" href="videos.html">
+                              Videos
+                          </a>
+                      </li>
+                      <li class="nav-item">
                           <a class="nav-link" id="navbarPages" href="faq.html">
                               FAQ
                           </a>
@@ -166,7 +171,7 @@
             </p>
             <p>
                 <b>What is the cost of treatment?</b> <br>
-                The treatment costs $4,000.  If a patient can not afford treatment, and their medical situation is critical, then we may provide treatment for less or for free.
+                The treatment costs $6,000.  If a patient can not afford treatment, and their medical situation is critical, then we may provide treatment for less or for free.
             </p>
             <p>
                 <b>How does your treatment compare to other clinics?</b> <br>
