--- a/routine.html
+++ b/routine.html
@@ -81,6 +81,11 @@
                           </a>
                       </li>
                       <li class="nav-item">
+                          <a class="nav-link" id="navbarPages" href="videos.html">
+                              Videos
+                          </a>
+                      </li>
+                      <li class="nav-item">
                           <a class="nav-link" id="navbarPages" href="faq.html">
                               FAQ
                           </a>
@@ -169,16 +174,22 @@
 </table>
 
 <br>
+<p><b>Monthly Routine</b></p>
+<table style="celllpadding: 100px">
+<tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
+</table>
+
+<br>
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Inject bioregulator peptides </td>
+<tr><td> </td><td>Very small embryonic-like stem cells therapy </td>
 </table>
 
 <br>
 <p><b>Yearly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Blood testing </td>
-<tr><td> </td><td>Inject very small embryonic-like stem cells (VSELs) </td>
 <tr><td> </td><td>Extracorporeal blood oxygenation and ozonation </td>
 <tr><td> </td><td>Go to dentist for teeth cleaning </td>
 </table>
@@ -197,7 +208,7 @@
 <tr><td> </td><td>Whole house water filter from ophorawater.com</td>
 <tr><td> </td><td>Whole house air filter from iqair.com</td>
 <tr><td> </td><td>Standing desk from varidesk.com</td>
-<tr><td> </td><td>Install reticare.com screen over monitors to protect eyes</td>
+<tr><td> </td><td>UV blocking screens over monitors to protect eyes from reticare.com</td>
 </table>
 
 <br>
@@ -241,9 +252,6 @@
 <tr><td> </td><td>No root canals</td>
 <tr><td> </td><td>No metal dental implants</td>
 </table>
-
-<!-- cd /Users/davidpotter/Desktop/institutereg_website; git add .; git commit -m "."; git push -->
-
               
           </div>
         </div> <!-- / .row -->
