--- a/contact.html
+++ b/contact.html
@@ -81,6 +81,11 @@
                           </a>
                       </li>
                       <li class="nav-item">
+                          <a class="nav-link" id="navbarPages" href="videos.html">
+                              Videos
+                          </a>
+                      </li>
+                      <li class="nav-item">
                           <a class="nav-link" id="navbarPages" href="faq.html">
                               FAQ
                           </a>
@@ -132,17 +137,14 @@
           <div class="col-12 col-md-10 col-lg-9 col-xl-8">
 
             <p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2622.6106572959543!2d-117.0240009076939!3d32.53605701398647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9497919d9d27d%3A0x62544f1fef56fb8b!2sP.%C2%BA%20del%20Centenario%209580%2C%20Zona%20Urbana%20Rio%20Tijuana%2C%2022320%20Tijuana%2C%20B.C.%2C%20Mexico!5e0!3m2!1sen!2sus!4v1665254423020!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.810785965278!2d-111.8014867!3d40.6340546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875263b3fa7a7a25%3A0x1561105636465386!2s6440%20S%20Millrock%20Dr%2C%20Cottonwood%20Heights%2C%20UT%2084121!5e0!3m2!1sen!2sus!4v1673730821509!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </p>
               
             <p>
             <b>Address</b> <br>
               Institute of Regeneration <br>
-              New City Medical Plaza <br>
-              P.º del Centenario 9580 <br>
-              Zona Urbana Rio Tijuana <br>
-              22010 Tijuana, B.C. <br>
-              Mexico <br>
+              6440 S Millrock Dr. <br>
+              Salt Lake City, UT 84121 <br>
             </p>
 
             <p>
