--- a/science.html
+++ b/science.html
@@ -81,6 +81,11 @@
                           </a>
                       </li>
                       <li class="nav-item">
+                          <a class="nav-link" id="navbarPages" href="videos.html">
+                              Videos
+                          </a>
+                      </li>
+                      <li class="nav-item">
                           <a class="nav-link" id="navbarPages" href="faq.html">
                               FAQ
                           </a>
