--- a/vsels.html
+++ b/vsels.html
@@ -81,11 +81,15 @@
                           </a>
                       </li>
                       <li class="nav-item">
+                          <a class="nav-link" id="navbarPages" href="videos.html">
+                              Videos
+                          </a>
+                      </li>
+                      <li class="nav-item">
                           <a class="nav-link" id="navbarPages" href="faq.html">
                               FAQ
                           </a>
                       </li>
-
                       <li class="nav-item">
                           <a class="nav-link" id="navbarPages" href="contact.html">
                               Contact
