--- a/videos.html
+++ b/videos.html
@@ -145,7 +145,7 @@
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        This video shows...
+                        Dr. Hollands is a renowned clinical scientist, academic, and researcher in the field of stem cell technology.
                     </p>                      
                 </div>
             </div> <!-- / .row -->
@@ -166,7 +166,7 @@
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        This video shows...
+                        Dr. Todd Ovokaitys is the inventor of the laser used in VSEL therapy.
                     </p>                      
                 </div>
             </div> <!-- / .row -->
@@ -188,7 +188,7 @@
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        This video shows...
+                        Scott Greenberg MD endorses VSEL therapy
                     </p>                      
                 </div>
             </div> <!-- / .row -->
@@ -210,7 +210,7 @@
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        This video shows...
+                        David Minkoff MD discusses the future of VSEL therapy
                     </p>                      
                 </div>
             </div> <!-- / .row -->
@@ -231,7 +231,7 @@
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        This video shows...
+                        Dr. Harry Adelson endorses VSEL therapy
                     </p>                      
                 </div>
             </div> <!-- / .row -->
