--- a/index.html
+++ b/index.html
@@ -130,6 +130,20 @@
       <br>
 
 
+    <!-- SECTION -->
+    <section class="pt-6 pt-md-8">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-10 col-lg-9 col-xl-8">
+
+            We are currently recruiting for a randomized clinical trial of VSEL therapy in heart failure patients.  If you are interested in participating in this clinical trial please contact us.
+
+          </div>
+        </div> <!-- / .row -->
+      </div> <!-- / .container -->
+    </section>
+
+
     <!-- TESTIMONIALS -->
     <!--
     <section class="pt-10 pt-md-12">
