--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-9 col-xl-8">
 
-            We are currently recruiting for a randomized clinical trial of VSEL therapy in heart failure patients.  If you are interested in participating in this clinical trial please contact us.
+            We are currently recruiting for a randomized clinical trial of VSEL therapy for patients with heart failure.  The trial will be in San Diego CA.  If you are interested in participating in this clinical trial please contact us.
 
           </div>
         </div> <!-- / .row -->
