--- a/contact.html
+++ b/contact.html
@@ -135,16 +135,19 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-9 col-xl-8">
-
-            <p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.810785965278!2d-111.8014867!3d40.6340546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875263b3fa7a7a25%3A0x1561105636465386!2s6440%20S%20Millrock%20Dr%2C%20Cottonwood%20Heights%2C%20UT%2084121!5e0!3m2!1sen!2sus!4v1673742811625!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </p>
               
             <p>
             <b>Address</b> <br>
               Institute of Regeneration <br>
               6440 S Millrock Dr. <br>
               Salt Lake City, UT 84121 <br>
+            </p>
+
+            <p>
+            <b>Hours</b> <br>
+              Mon - Thu: 8am to 5pm <br>
+              Friday: 8am to 4pm <br>
+              Sat - Sun: Closed <br>
             </p>
 
             <p>
