--- a/faq.html
+++ b/faq.html
@@ -122,7 +122,7 @@
 
             <!-- Heading -->
             <h1 class="display-4 text-center">
-              Frequently Asked Questions (FAQ)
+              Frequently Asked Questions
             </h1>
 
           </div>
