--- a/videos.html
+++ b/videos.html
@@ -123,7 +123,7 @@
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        Dr. Joe Mercola and Ryan Smith, CEO of TruDiagnostic, discuss that VSELs are the top intervention to reverse biological age
+                        Joe Mercola D.O. and Ryan Smith, CEO of TruDiagnostic, discuss that VSELs are the top intervention to reverse biological age.
                     </p>                      
                 </div>
             </div> <!-- / .row -->
@@ -145,7 +145,7 @@
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        Dr. Hollands is a renowned clinical scientist, academic, and researcher in the field of stem cell technology.
+                        Dr. Hollands is a renowned clinical scientist, academic, and researcher in stem cell technology.  In this video, Dr. Hollands provides an overview and history of VSELs.
                     </p>                      
                 </div>
             </div> <!-- / .row -->
@@ -162,11 +162,11 @@
                 </div>
                 <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
                     <h2>
-                        Dr. Todd Ovokaitys And VSELs
+                        Todd Ovokaitys MD And VSELs
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        Dr. Todd Ovokaitys is the inventor of the laser used in VSEL therapy.
+                        Todd Ovokaitys MD is the inventor of the laser used in VSEL therapy.
                     </p>                      
                 </div>
             </div> <!-- / .row -->
@@ -188,7 +188,7 @@
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        Scott Greenberg MD endorses VSEL therapy
+                        Scott Greenberg MD is the chair of the Institutional Review Board of the American Association of Stem Cell Physicians.  In this video, Dr. Greenberg endorses VSEL therapy.
                     </p>                      
                 </div>
             </div> <!-- / .row -->
@@ -210,7 +210,7 @@
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        David Minkoff MD discusses the future of VSEL therapy
+                        David Minkoff MD is a leader in natural medicine.  In this video, Dr. Minkoff endorses VSEL therapy.
                     </p>                      
                 </div>
             </div> <!-- / .row -->
@@ -231,7 +231,7 @@
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        Dr. Harry Adelson endorses VSEL therapy
+                        Dr. Harry Adelson was one of the earliest adopters of the use of cell therapy for chronic musculoskeletal pain.  In this video, Dr. Adelson endorses VSEL therapy.
                     </p>                      
                 </div>
             </div> <!-- / .row -->
