--- a/routine.html
+++ b/routine.html
@@ -183,20 +183,20 @@
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Inject bioregulator peptides </td>
-<tr><td> </td><td>Very small embryonic-like stem cells therapy </td>
+<tr><td> </td><td>Very small embryonic-like stem cell therapy </td>
 </table>
 
 <br>
 <p><b>Yearly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Blood testing </td>
-<tr><td> </td><td>Extracorporeal blood oxygenation and ozonation </td>
 <tr><td> </td><td>Go to dentist for teeth cleaning </td>
 </table>
 
 <br>
 <p><b>Occasional Routine</b></p>
 <table style="celllpadding: 100px">
+<tr><td> </td><td>Extracorporeal blood oxygenation and ozonation </td>
 <tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations if found</td>
 <tr><td> </td><td>Test home for mold</td>
 <tr><td> </td><td>Test home for EMFs</td>
