--- a/routine.html
+++ b/routine.html
@@ -150,7 +150,7 @@
 <tr><td>        </td><td>While walking wear hat with wide brim to protect facial skin from UV light </td>
 <tr><td>9:00 AM </td><td>Molecular hydrogen in glass of water</td>
 <tr><td>9:30 AM </td><td>Breakfast</td>
-<tr><td>        </td><td>Blend an avocado, dandelion, blackberries, cranberries, lemon juice, water</td>
+<tr><td>        </td><td>Blend avocado, dandelion, blackberries, cranberries, lemon juice, water</td>
 <tr><td>        </td><td>Epic bison bites, cucumber, macadamia nuts</td>
 <tr><td>        </td><td>50 supplements</td>
 <tr><td>        </td><td>Rinse mouth with xylitol and baking soda</td>
@@ -162,8 +162,8 @@
 <tr><td>1:00 PM </td><td>Brisk walk outside</td>
 <tr><td>3:00 PM </td><td>If tired use NuCalm</td>
 <tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy </td>
-<tr><td>4:30 PM </td><td>One cup bone broth </td>
-<tr><td>5:00 PM </td><td>Dinner consisting of beef, potato, vegetables, dried fruit </td>
+<!--<tr><td>4:30 PM </td><td>One cup bone broth </td>-->
+<tr><td>5:00 PM </td><td>Dinner consisting of beef, potato, vegetables, prunes </td>
 <tr><td>        </td><td>Enzymes, multivitamin, calcium, magnesium</td>
 <tr><td>        </td><td>Rinse mouth with xylitol and baking soda</td>
 <tr><td>        </td><td>Wait about 30 minutes, brush teeth</td>
