--- a/faq.html
+++ b/faq.html
@@ -175,7 +175,7 @@
             </p>
             <p>
                 <b>How does your treatment compare to other clinics?</b> <br>
-                Most clinics in the United States charge $7,000 to $11,000 for the same treatment.
+                Most clinics charge $7,000 to $11,000 for the same treatment.
             </p>
             <p>
                 <b>Will my insurance cover the cost of treatment?</b> <br>
