--- a/faq.html
+++ b/faq.html
@@ -167,7 +167,7 @@
             </p>
             <p>
                 <b>Does the treatment have side effects?</b> <br>
-                We know of no serious side effects from this treatment.
+                We know of no serious side effects from autologous treatment.  Ten to twenty percent of the time a patient will feel very tired for a few days.
             </p>
             <p>
                 <b>What is the cost of treatment?</b> <br>
