--- a/routine.html
+++ b/routine.html
@@ -138,9 +138,10 @@
 
 <p><b>Daily Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td>6:00 AM </td><td>Drink water </td>
+<tr><td>6:00 AM </td><td>Turn on lights at full brightness</td>
+<tr><td>        </td><td>Drink water </td>
 <tr><td>7:00 AM </td><td>Weight lifting at the gym, a few days per week </td>
-<tr><td>        </td><td>Coming soon: KAATSU Blood Flow Restriction training</td>
+<tr><td>        </td><td>Coming soon: Blood Flow Restriction training</td>
 <tr><td>8:00 AM </td><td>Red and infrared light therapy on entire body</td>
 <tr><td>        </td><td>Maragen calcium in two cups water</td>
 <tr><td>        </td><td>Coming soon: Sauna</td>
@@ -155,7 +156,7 @@
 <tr><td>        </td><td>50 supplements</td>
 <tr><td>        </td><td>Rinse mouth with xylitol and baking soda</td>
 <tr><td>        </td><td>Wait about 30 minutes, brush teeth</td>
-<tr><td>1:00 PM </td><td>Lunch consisting of lentil soup, pork, sunflower greens, sprouts, strawberries</td>
+<tr><td>1:00 PM </td><td>Lunch consisting of lentil soup, salt, pork, sunflower greens, sprouts, strawberries</td>
 <tr><td>        </td><td>Enzymes, multivitamin, calcium, magnesium</td>
 <tr><td>        </td><td>Rinse mouth with xylitol and baking soda</td>
 <tr><td>        </td><td>Wait about 30 minutes, brush teeth</td>
@@ -168,7 +169,7 @@
 <tr><td>        </td><td>Rinse mouth with xylitol and baking soda</td>
 <tr><td>        </td><td>Wait about 30 minutes, brush teeth</td>
 <tr><td>8:00 PM </td><td>Lights dimmed </td>
-<tr><td>8:15 PM </td><td>Turn off all electronics </td>
+<tr><td>8:15 PM </td><td>Turn off computer </td>
 <tr><td>        </td><td>Floss teeth, Hydro Floss with small amount of H₂O₂, tounge scraper </td>
 <tr><td>        </td><td>Oil pulling for teeth </td>
 </table>
